--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
   ],
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.1.1",
+    "@angular/animations": "^11.1.1",
     "@angular/cdk": "^11.1.1",
     "@angular/common": "11.1.1",
     "@angular/compiler": "11.1.1",
     "@angular/core": "11.1.1",
     "@angular/forms": "11.1.1",
+    "@angular/localize": "11.1.1",
     "@angular/material": "^11.1.1",
     "@angular/platform-browser": "11.1.1",
     "@angular/platform-browser-dynamic": "11.1.1",
     "@angular/router": "11.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "bootstrap": "^4.5.0",
     "core-js": "^2.4.1",
     "marked": "^0.3.9",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.2.3",
     "rxjs": "^6.4.0",
     "rxjs-observable": "0.0.7",
     "tslib": "^1.9.0",
