--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@angular/router": "11.1.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.4",
     "core-js": "^2.4.1",
     "marked": "^0.3.9",
+    "ng2-charts": "^2.4.2",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.3",
     "rxjs": "^6.4.0",
